<resources>
    <string name="app_name">Car Parker</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="find_spot">Find Parking </string>
    <string name="reserve_spot">Spot Parked In</string>
    <string name="free_spot">Release Parking </string>
    <string name="app_color">#616161</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="find">Find</string>
    <string name="back">Back</string>
    <string name="settingsButton">Settings</string>
    <string name="aboutButton">About</string>
    <string name="parkingListButton">List All Spots</string>

    <string name="CREATE_PARKING_SQL">
        CREATE TABLE IF NOT EXISTS Parking
        (id TEXT PRIMARY KEY, spots TEXT,
        spotsTaken TEXT, address TEXT)
    </string>

    <string name="sign">Sign In</string>

    <string name="spot">spot</string>

    <string name="DROP_PARKING_SQL">
        DROP TABLE IF EXISTS Parking
    </string>


    <string name="logout">Logout</string>
    <string name="title_activity_find">Map</string>

    <string name="LOGIN_PREFS">edu.uw.tacoma.ckubec.webservicelab.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="LOGIN_FILE"> edu.uw.tacoma.ckubec.webservicelab.LOGIN_FILE</string>

    <string name="LOGGING">http://cssgate.insttech.washington.edu/~ckubec/Android/login.php?</string>

    <string name="reserve">Reserve</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_reserve">ReserveActivity</string>
    <string name="title_activity_free">FreeActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_sendMessage">SendAMessage</string>
</resources>
