<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:context="authenticate.LoginFragment"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:background="@color/background"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/username"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:padding="20dp"
            android:inputType="text"
            android:layout_centerInParent="true"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:padding="20dp"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textWebPassword"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:id="@+id/sign_up"
                android:text="@string/sign_up"
                android:onClick="signUp"
                android:layout_margin="15dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/sign_in"
                android:text="@string/login"
                android:onClick="signIn"
                android:layout_margin="15dp"
                />
        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
